crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__big_constructor_field_skip.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\ntype Datum = Datum { a : Int, b : Int, c : Int, d : Int }\nmain : int\nmain = Builtin.unIData ((Datum { a = 10, b = 20, c = 30, d = 40 }).d)\n"
---
--- unoptimized Core
let fromInt#6 : int -> Int = iData in
let evaluated#11 : Main.Datum = (\field#2 : Int field#3 : Int field#4 : Int field#5 : Int -> constrData 0 (mkCons field#2 (mkCons field#3 (mkCons field#4 (mkCons field#5 (con (list data) [])))))) (fromInt#6 10) (fromInt#6 20) (fromInt#6 30) (fromInt#6 40) in
let projection#12 : pair int (list Data) = unConstrData evaluated#11 in
case@Pair projection#12 of
  Pair tag#7 fields#8 -> let projection#13 : list Data = dropList 3 fields#8 in
  case@List projection#13 of
    Cons head#9 tail#10 -> let main#1 : int = unIData head#9 in
    main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromInt_6
    [(lam evaluated_11
      [(lam projection_12
        (case
          projection_12
          (lam tag_7
            (lam fields_8
              [(lam projection_13
                (case
                  projection_13
                  (lam head_9 (lam tail_10 [(lam main_1 main_1) [(builtin unIData) head_9]]))
                  (error)))
                [[(force (builtin dropList)) (con integer 3)] fields_8]]))))
        [(builtin unConstrData) evaluated_11]])
      [[[[(lam field_2
        (lam field_3
          (lam field_4
            (lam field_5
              [[(builtin constrData) (con integer 0)]
                [[(force (builtin mkCons)) field_2]
                  [[(force (builtin mkCons)) field_3]
                    [[(force (builtin mkCons)) field_4]
                      [[(force (builtin mkCons)) field_5] (con (list data) [])]]]]]))))
        [fromInt_6 (con integer 10)]]
        [fromInt_6 (con integer 20)]]
        [fromInt_6 (con integer 30)]]
        [fromInt_6 (con integer 40)]]])
    (builtin iData)])
--- optimized Core
let fromInt#14 : int -> Int = iData in
let anf#31 : Int = fromInt#14 10 in
let anf#33 : Int = fromInt#14 20 in
let anf#35 : Int = fromInt#14 30 in
let anf#37 : Int = fromInt#14 40 in
let anf#27 : list Data = mkCons anf#37 (con (list data) []) in
let anf#28 : list Data = mkCons anf#35 anf#27 in
let anf#29 : list Data = mkCons anf#33 anf#28 in
let anf#30 : list Data = mkCons anf#31 anf#29 in
let evaluated#19 : Main.Datum = constrData 0 anf#30 in
let projection#20 : pair int (list Data) = unConstrData evaluated#19 in
let projection#23 : list Data = dropList 3 anf#30 in
case@List projection#23 of
  Cons head#24 tail#25 -> unIData head#24
--- optimized UPLC
(program 1.1.0
  [(lam builtin_16
    [(lam builtin_17
      [(lam fromInt_1
        [(lam anf_2
          [(lam anf_3
            [(lam anf_4
              [(lam anf_5
                [(lam anf_6
                  [(lam anf_7
                    [(lam anf_8
                      [(lam anf_9
                        [(lam evaluated_10
                          [(lam projection_11
                            [(lam projection_12
                              (case
                                projection_12
                                (lam head_13 (lam tail_15 [(builtin unIData) head_13]))
                                (error)))
                              [[builtin_16 (con integer 3)] anf_9]])
                            [(builtin unConstrData) evaluated_10]])
                          [[(builtin constrData) (con integer 0)] anf_9]])
                        [[builtin_17 anf_2] anf_8]])
                      [[builtin_17 anf_3] anf_7]])
                    [[builtin_17 anf_4] anf_6]])
                  [[builtin_17 anf_5] (con (list data) [])]])
                [fromInt_1 (con integer 40)]])
              [fromInt_1 (con integer 30)]])
            [fromInt_1 (con integer 20)]])
          [fromInt_1 (con integer 10)]])
        (builtin iData)])
      (force (builtin mkCons))])
    (force (builtin dropList))])
--- result
(con integer 40)
--- logs
[]
--- budget
cpu: 1772809, memory: 8156
