crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__big_record_pattern_skips_ignored_fields.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
description: "module Main exposing (..)\ntype alias Record = { a : Int, b : Int, c : Int, d : Int, e : Int }\nread : Record -> int\nread value = case value of\n    { b, d, e } -> Builtin.addInteger (Builtin.unIData b) (Builtin.addInteger (Builtin.unIData d) (Builtin.unIData e))\nmain : int\nmain = read { a = 1, b = 2, c = 3, d = 4, e = 5 }\n"
---
--- core
let read#2 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int, _4 : Int } -> int = \value#4 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int, _4 : Int } -> let match#8 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int, _4 : Int } = value#4 in
let projection#21 : list Data = unListData match#8 in
case@List projection#21 of
  Cons ignored#14 fieldTail#15 -> case@List fieldTail#15 of
    Cons field#10 fieldTail#16 -> case@List fieldTail#16 of
      Cons ignored#17 fieldTail#18 -> case@List fieldTail#18 of
        Cons field#12 fieldTail#19 -> case@List fieldTail#19 of
          Cons field#13 fieldTail#20 -> let b#5 : Int = field#10 in
          let d#6 : Int = field#12 in
          let e#7 : Int = field#13 in
          addInteger (unIData b#5) (addInteger (unIData d#6) (unIData e#7)) in
let fromInt#3 : int -> Int = iData in
let main#1 : int = read#2 (listData (mkCons (fromInt#3 1) (mkCons (fromInt#3 2) (mkCons (fromInt#3 3) (mkCons (fromInt#3 4) (mkCons (fromInt#3 5) (con (list data) []))))))) in
main#1
--- uplc
(program 1.1.0
  [(lam read_2
    [(lam fromInt_3
      [(lam main_1 main_1)
        [read_2
          [(builtin listData)
            [[(force (builtin mkCons)) [fromInt_3 (con integer 1)]]
              [[(force (builtin mkCons)) [fromInt_3 (con integer 2)]]
                [[(force (builtin mkCons)) [fromInt_3 (con integer 3)]]
                  [[(force (builtin mkCons)) [fromInt_3 (con integer 4)]]
                    [[(force (builtin mkCons)) [fromInt_3 (con integer 5)]] (con (list data) [])]]]]]]]])
      (builtin iData)])
    (lam value_4
      [(lam match_8
        [(lam projection_21
          (case
            projection_21
            (lam ignored_14
              (lam fieldTail_15
                (case
                  fieldTail_15
                  (lam field_10
                    (lam fieldTail_16
                      (case
                        fieldTail_16
                        (lam ignored_17
                          (lam fieldTail_18
                            (case
                              fieldTail_18
                              (lam field_12
                                (lam fieldTail_19
                                  (case
                                    fieldTail_19
                                    (lam field_13
                                      (lam fieldTail_20
                                        [(lam b_5
                                          [(lam d_6
                                            [(lam e_7
                                              [[(builtin addInteger) [(builtin unIData) b_5]]
                                                [[(builtin addInteger) [(builtin unIData) d_6]] [(builtin unIData) e_7]]])
                                              field_13])
                                            field_12])
                                          field_10]))
                                    (error))))
                              (error))))
                        (error))))
                  (error))))
            (error)))
          [(builtin unListData) match_8]])
        value_4])])
--- result
(con integer 11)
--- logs
[]
--- budget
cpu: 2378838, memory: 10684
